--- a/BACnetServerExample/BACnetServerExample.csproj
+++ b/BACnetServerExample/BACnetServerExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -14,5 +14,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputPath>../../bin</OutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\submodules\cas-bacnet-stack\adapters\csharp\CASBACnetStackAdapter.cs" Link="CASBACnetStackAdapter.cs" />
+  </ItemGroup>
 
 </Project>
